# hsh

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: agent.rs  cli.rs  client.rs  commands.rs  config.rs  crypto.rs  envfile.rs  forget.rs  hygiene.rs  main.rs  profiles.rs  prompt.rs  protocol.rs
src/commands/: init.rs  lock.rs  run.rs  status.rs
tests/: agent.rs  init.rs  run.rs
